Migrate to Java 17 module system